[package]
name = "bloggies"
version = "0.1.0"
authors = ["megatank58", "vaporoxx"]
edition = "2024"
description = "Ad Nauseam blog bot"
repository = "https://github.com/ad-nauseam/bloggies"
license = "ISC"
default-run = "bloggies"

[dependencies]
anyhow = "1"
chrono = "0.4.41"
dotenv = "0.15"
serenity = "0.12"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
