[package]
name = "bloggies"
version = "0.1.0"
authors = ["megatank58", "vaporoxx"]
edition = "2024"
description = "Ad Nauseam blog bot"
repository = "https://github.com/ad-nauseam/bloggies"
license = "ISC"
default-run = "bloggies"

[dependencies]
anyhow = "1"
dotenvy = "0.15"

[dependencies.serenity]
version = "0.12"
features = ["collector"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
